Fix input on mobile, Fix options border-radius when no tasks are listed

--- a/client/src/components/Options/style.css
+++ b/client/src/components/Options/style.css
@@ -7,5 +7,8 @@
     font-size: 12px;
     border-radius: 0px 0px 5px 5px;
     box-shadow: 0.2rem 2rem 2rem rgba(0,0,0, 0.3);
+}
 
+.options:first-child {
+    border-radius: 5px;
 }
